<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="4dp"
    android:layout_margin="8dp"
    tools:context=".MainActivity">


    <android.support.v7.widget.CardView
        android:id="@+id/cv1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <RelativeLayout
            android:id="@+id/rl1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="4dp">

            <TextView
                android:id="@+id/tvPlace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flight"
                android:textSize="24sp"
                android:padding="4dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvOperation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/operation"
                android:layout_below="@+id/tvPlace"
                android:padding="4dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvBos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvOperation"
                android:layout_marginTop="8dp"
                android:layout_marginRight="40dp"
                android:layout_marginEnd="22dp"
                android:text="@string/bos"
                android:textStyle="bold"
                android:textAllCaps="true"
                app:fontFamily="sans-serif-condensed"
                android:textSize="32sp" />

            <ImageView
                android:id="@+id/imFlight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_airplanemode_active_black_24dp"
                android:layout_toRightOf="@+id/tvBos"
                android:layout_toEndOf="@+id/tvBos"
                android:layout_marginTop="16dp"
                android:layout_below="@+id/tvOperation"/>

            <ImageView
                android:src="@android:drawable/divider_horizontal_bright"
                android:layout_width="190dp"
                android:layout_height="2dp"
                android:layout_marginTop="24dp"
                android:layout_toRightOf="@+id/imFlight"
                android:visibility="visible"
                android:layout_toEndOf="@+id/imFlight"
                android:layout_below="@+id/tvOperation"/>

            <TextView
                android:id="@+id/tvCdg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cdg"
                android:textStyle="bold"
                android:textAlignment="center"
                app:fontFamily="sans-serif-condensed"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="8dp"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/tvOperation"
                android:textAllCaps="true"
                android:textSize="32sp" />

            <Button
                android:id="@+id/btn1"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_marginTop="16dp"
                android:text="@string/btn1"
                android:layout_below="@+id/tvBos"
                android:background="@color/colorGreen"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/time"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="8dp"
                android:layout_toEndOf="@+id/btn1"
                android:layout_toRightOf="@+id/btn1"
                android:layout_below="@+id/tvBos"
                android:layout_marginStart="8dp"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp"
        android:layout_marginTop="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail1"
            android:textSize="16sp"
            app:fontFamily="sans-serif-smallcaps"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            />

        <LinearLayout
            android:id="@+id/ll2a"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/departed"
                android:textSize="16sp"
                android:layout_weight="1"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/terminal"
                android:layout_weight="1"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/gate"
                android:layout_weight="1"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll2b"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/departedValue"
                android:textSize="24sp"
                android:textColor="@color/colorGreen"
                android:layout_weight="1"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/terminalValue"
                android:textSize="24sp"
                android:layout_weight="1"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/gateValue"
                android:layout_weight="1"
                android:textSize="24sp"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp"
        android:layout_marginTop="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail2"
            android:textSize="16sp"
            app:fontFamily="sans-serif-smallcaps"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            />

        <LinearLayout
            android:id="@+id/ll3a"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expected"
                android:textSize="16sp"
                android:layout_weight="1"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/terminal"
                android:layout_weight="1"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/gate"
                android:gravity="center"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll3b"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expectedValue"
                android:textSize="24sp"
                android:layout_weight="1"
                android:textColor="@color/colorGreen"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/terminalValue2"
                android:textSize="24sp"
                android:layout_weight="1"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/gateValue2"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="24sp"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceSmall"
        android:text="@string/scheduleDeparture"
        android:textSize="14sp"
        android:paddingTop="8dp" />

    <android.support.v7.widget.CardView
        android:id="@+id/cv2"
        android:background="@color/colorWhite"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:id="@+id/ll5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/duration"
                android:textAppearance="?android:textAppearanceSmall"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/timeD"
                android:textAppearance="?android:textAppearanceSmall"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/passenger"
                android:textAppearance="?android:textAppearanceSmall"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/name"
                android:textAppearance="?android:textAppearanceSmall"
                android:textSize="14sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/ll6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="8dp"
                    android:text="@string/conf"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/seat"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="8dp"
                    android:text="@string/confVal"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/seatVal"
                    android:textStyle="bold"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/email"
                android:textAppearance="?android:textAppearanceSmall"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/contact"
                android:textAppearance="?android:textAppearanceSmall"
                android:textSize="14sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
</ScrollView>
